--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>Reference</h2>
     <h3>Application Layer Features</h3>
     <ul>
-      <a href="showcase/endpoints.html"><li>Applications</li></a>
-      <a href="showcase/endpoints.html"><li>Endpoints</li></a>
-      <a href="showcase/middleware.html"><li>Middleware</li></a>
+      <a href="applications.html"><li>Applications</li></a>
+      <a href="endpoints.html"><li>Endpoints</li></a>
+      <a href="middleware.html"><li>Middleware</li></a>
       <!-- <a href=""><li>Extensible Classes for Different Application Types</li></a> -->
       <!-- <a href=""><li>Endpoints with Pure Business Logic</li></a> -->
       <!-- <a href=""><li>Stackable Decorator-based Endpoint Registration</li></a> -->
