--- a/endpoints.html
+++ b/endpoints.html
@@ -65,12 +65,10 @@ def get_account_settings(account: Account) -> AccountSettings:
       <div class="card">
         <div>
           <h2>Endpoint Execution</h2>
-          <p>When running endpoints, Pybiz executes a series of callbacks
-          that transform native application inputs and outputs into and out of the
-          endpoint and apply middleware.</p>
-
-          <p>A note on nomenclature: the Python callable registered as an endpoint is
-          called the <i>target</i> in docs and code.</p>
+          <p>When running endpoints, Pybiz executes a series of callbacks,
+          responsible for marshaling native IO and performing middleware services
+          before and after the endpoint function executes. We
+          refer to this function as the <i>target</i>.</p>
 
           <h3>Process Overview:</h3>
           <ol id="steps-overview-list">
